Initial version of the C# api implementation
